# djanghi

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  settings.py
.github/workflows/: ci-config.yml  ci-tests.yml
apps/: custom_authentications.py  middlewares.py  mixins.py  permissions.py  urls.py  utils.py
apps/associations/: admin.py  models.py  serializers.py  urls.py  views.py
apps/associations/migrations/: 0001_initial.py  0002_add_meeting.py  0002_initial.py  0003_alter_association_email_from.py  0004_association_notify_user_payments.py
apps/extensions/: backend.py
apps/payments/: apps.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/payments/migrations/: 0001_initial.py  0002_membershippaymentsatus.py
apps/profiles/: admin.py  apps.py  models.py  roles.py  serializers.py  signals.py  urls.py  views.py
apps/profiles/migrations/: 0001_initial.py  0002_user_notify_on_payment.py  0003_user_city_user_country_user_phone_number_and_more.py  0004_passwordresetlink.py  0005_useroptincontributionfields.py
apps/statics/css/: base.css
apps/statics/error_pages/: 404.html  50x.html
apps/templates/: base.html
apps/templates/emails/: base.html  base.mjml  membership-payment-notification.html  password-reset.html  registration.html
apps/templates/forms/: base.html  password-reset.html  registration.html
apps/templates/user_registration/: registration_form.html
entrypoints/: entrypoint.sh  init-database.sh
nginx/: nginx.conf  ngnix.conf
settings/: __init__.py  any_mail.py  base.py  logging.py  rest_framework.py  simple_jwt.py
tests/: __init__.py  conftest.py
tests/associations/: test_contribution_fields.py
tests/fixtures/: init_data.json
tests/payments/: conftest.py  test_bulk_membership_payments.py  test_membership_payments.py  test_membership_payments_status.py
tests/profiles/: conftest.py  test_bulk_contrib_field_opt_in.py  test_login.py  test_password_reset.py  test_payment_opt_in.py  test_registration.py  test_user_registration.py  test_users.py
