[tool.poetry]
name = "djanghi"
version = "1.0.0"
description = "Association management tool"

license = "Apache-2.0"

authors = [
    "Clovis Djiometsa <clovis@dnclovis.com>"
]

[tool.poetry.dependencies]
python = "==3.8.*"

Django = "3.2.9"
django-admin-rangefilter = "~0.5"
django-cors-headers = "==3.4.0"
django-enumfields = "==2.0.0"
django-environ = "==0.4.5"
django-extensions = "==3.1.5"
django-fancy-cache = "~1.0"
django-fieldsignals = "~0.5"
django-filter = "~2.4"
djangorestframework = "==3.12.4"
djangorestframework-jsonapi = "~4.*"
djangorestframework-simplejwt = "==5.0.0"
ipython = ">=7.17"
psycopg2 = ">=2.5.4"
pyyaml = ">=4.2b4"
redis = "~3.3"
requests = "~2.24"
uwsgi = "~2.0.17"
watchdog = "~0.9"
whitenoise = "~4.1"
watchtower = "==0.5.5"


[tool.poetry.dev-dependencies]
bandit = "~1.6"
coverage = "==4.5.1"
django-mock-queries = "~2.1"
django-pycharm-breakpoint = "~0.2.0"
fpdf = "==1.7.2"
freezegun = "~0.3"
pillow = "~7"
prospector = {git = "git://github.com/shipchain/prospector.git", rev = "72e9b88a604217584d227282d2e484de1482efca"}
pyexcel = "~0.5"
pyexcel-xls = "~0.5"
pyexcel-xlsx = "~0.5"
pyrasite = {git = "git://github.com/diamond-lizard/pyrasite.git", rev = "d1e2301fe60ab03e99a51ca1b105f7c3368b1a33"}
pytest-cov = "~2.6"
pytest-django = "~3.5"
pytest-mock = "^1.10"
responses = "~0.12"
safety = "^1.8"