[tool.poetry]
name = "djanghi"
version = "1.0.0"
description = "Association management tool"

license = "Apache-2.0"

authors = [
    "Clovis Djiometsa <clovis@dnclovis.com>"
]

[tool.poetry.dependencies]
python = "==3.8.*"

Django = "==3.2.12"
django-admin-rangefilter = "~0.5"
django-cors-headers = ">=3.10.0"
django-enumfields = "==2.0.0"
django-environ = "~0.8"
django-extensions = "==3.1.5"
django-fancy-cache = "~1.0"
django-fieldsignals = "~0.5"
django-filter = "~2.4"
djangorestframework = "==3.12.4"
djangorestframework-jsonapi = "~4.*"
djangorestframework-simplejwt = "==5.0.0"
drf-nested-routers = "~0.93.0"
ipython = ">=7.17"
psycopg2 = ">=2.5.4"
pyyaml = ">=4.2b4"
redis = "~3.3"
requests = "~2.24"
uwsgi = "~2.0.17"
watchdog = "~0.9"
whitenoise = "~4.1"
watchtower = "==0.5.5"


[tool.poetry.dev-dependencies]
bandit = "~1.6"
django-mock-queries = "~2.1"
django-pycharm-breakpoint = "~0.2.0"
fpdf = "==1.7.2"
freezegun = "~0.3"
pillow = "~9"
pyexcel = "~0.5"
pyexcel-xls = "~0.5"
pyexcel-xlsx = "~0.5"
pytest = ">=5.4"
pytest-xdist = "~2.5"
pytest-cov = "~3"
pytest-django = "~4.5"
pytest-mock = "^1.10"
responses = "~0.12"
safety = "^1.8"